[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/CloudGun.gd" type="Script" id=1]
[ext_resource path="res://Assets/cloud.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/cloud_bulletsUI.gd" type="Script" id=4]
[ext_resource path="res://Actors/healthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/FireRate.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=5]
radius = 98.0
height = 0.0

[sub_resource type="Animation" id=7]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("cloud:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "add_clouders"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "lost_cloud"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("cloud:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1.5 ),
"transitions": PoolRealArray( 2, 2, 0.5, -0.5 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 0.7, 0.7 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "shoot_cute"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("cloud:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.8, 0.6 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "idle" ],
"method": "play"
} ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 389.001
height = 770.0

[node name="cloud" type="KinematicBody2D" groups=["cloud"]]
position = Vector2( 392, 362 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="FireRate" type="Timer" parent="."]
autostart = true
script = ExtResource( 6 )

[node name="cloud" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/die = SubResource( 7 )
anims/idle = SubResource( 4 )
anims/shoot_cute = SubResource( 8 )

[node name="Bullets" type="Label" parent="."]
margin_left = 45.0
margin_top = 92.0
margin_right = 157.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 3 )
text = "Rain : %s"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="healthBar" parent="." instance=ExtResource( 5 )]
margin_left = -134.0
margin_top = 90.0
margin_right = 226.0
margin_bottom = 149.0
mhealth = 100

[node name="autoshoot_range" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="autoshoot_range"]
rotation = -1.5708
shape = SubResource( 6 )

[connection signal="hit" from="." to="healthBar" method="_on_Cloud_hit"]
[connection signal="timeout" from="FireRate" to="." method="_on_FireRate_timeout"]
[connection signal="death" from="healthBar" to="." method="_on_healthBar_death"]
[connection signal="body_entered" from="autoshoot_range" to="." method="_on_autoshoot_range_body_entered"]
[connection signal="body_exited" from="autoshoot_range" to="." method="_on_autoshoot_range_body_exited"]
